# envoi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  library.py  pyproject.toml  requirements.txt  testing_deleteme.py
.github/workflows/: ci.yml  pre-commit-autoupdate.yml  release.yml
configs/: catalog.yml  defaults.yml  ee_catalog.yml  groups.yml  local_catalog.yml  run.yml
configs/examples/: groups_demo.yml
data/: points_sample.csv
data/for_testing/: adrian_example.csv
data/for_testing/sen2/: TG4NHB-sen2.tif
data/gee/: dem_elev_gee.tif  lc_majority_gee.tif  slope_gee.tif
demo/: getting_started.ipynb
demo/data/example_1/: tabular_demo.csv  tabular_demo_metadata.json  tabular_demo_qc.csv
demo/data/example_2/raster_demo/: raster_demo_metadata.json
demo/data/example_2/raster_demo/dem_glo30/: T2T1DJ-dem_glo30.tif  T6WPKD-dem_glo30.tif  TCSZX1-dem_glo30.tif  TG4NHB-dem_glo30.tif  TVCC3Y-dem_glo30.tif  TVNBV7-dem_glo30.tif
demo/data/example_3_1/: local_tabular_demo.csv  local_tabular_demo_metadata.json  local_tabular_demo_qc.csv
demo/data/example_3_2/local_raster_demo/: local_raster_demo_metadata.json
demo/data/example_3_2/local_raster_demo/dem_local/: T2T1DJ-dem_local.tif  T6WPKD-dem_local.tif  TCSZX1-dem_local.tif  TG4NHB-dem_local.tif  TVCC3Y-dem_local.tif  TVNBV7-dem_local.tif
demo/data/example_4/: multi_source_demo.csv  multi_source_demo_metadata.json  multi_source_demo_qc.csv
demo/data/input/: TG4NHB-dem.tif  sample_data.csv
docs/: advanced_guide.md  advanced_usage.md  architecture.md  cfg_reference.yml  plan_mvp.md  predictors.md  qc_spec.md  requirements.md
docs/minutes/: README.md
examples/: catalog.yml  run.yml  walkthrough.ipynb
examples/walkthrough_input/: biomass.tif  sample_points.csv
flow/: prefect_biodiversity_pipeline.py
scripts/: make_mini_dem.py
src/biodata/: __init__.py  auth.py  cli.py  config.py  enrich.py  extract.py  gee_download.py  gee_features.py  geometry.py  metadata.py  output.py  qc.py  reducers.py
src/biodata/adapters/: __init__.py  base.py  gee_adapter.py  gee_raster.py  local_adapter.py  local_raster.py
src/biodata/configs/: ee_catalog.yml  local_catalog.yml
src/envoi/: __init__.py  _config_parsing.py  _input_validation.py  _output_assembly.py  auth.py  catalog.py  config.py  extract.py  geo.py  metadata.py  progress.py  qc.py  reducers.py
src/envoi/adapters/: __init__.py  base.py  gee_adapter.py  local_adapter.py
src/envoi/adapters/earth_engine/: __init__.py  _image.py  _reducers.py  _tiles.py  adapter.py
src/envoi/configs/: defaults.yml  ee_catalog.yml  local_catalog.yml
src/envoi_webapp/: __init__.py  app.py  helpers.py
tests/: _gee_helpers.py  conftest.py  test_adde.py  test_catalog.py  test_config.py  test_enrich.py  test_extract.py  test_gee.py  test_gee_features.py  test_gee_parsers.py  test_groups_e2e.py  test_progress.py  test_reducers.py  test_schema.py  test_track.py  test_webapp_app.py  test_webapp_helpers.py
tests/data/: mini_dem.tif
