[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biodata-enricher"
version = "0.1.0"
description = "Enrich points with environmental predictors from local/remote sources (MVP)."
authors = [{name="Team Biodata", email="team@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "pyyaml>=6.0.1",
    "pyarrow>=17.0.0",
    # "earthengine-api>=0.1.398",   # add when implementing GEE adapter
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "black>=24.3.0",
]

[project.scripts]
biodata = "biodata.cli:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
