[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envoi-geospatial"
dynamic = ["version"]
description = "Automated feature extraction from environmental data sources for ecological and spatial analysis."
authors = [
    { name = "Adrian Baggström", email = "adrian.baggstrom@ebc.uu.se" },
    { name = "Jakob Nyström", email = "jakob.nystrom@ebc.uu.se" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "shapely>=2.0",
    "geopandas>=0.14",
    "pyyaml>=6.0.1",
    "pyarrow>=17.0.0",
    "tqdm>=4.65",
    "earthengine-api>=1.7",
    "requests>=2.31",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
]

keywords = [
  "gis",
  "raster",
  "geospatial",
  "earth-engine",
  "remote-sensing",
  "feature-extraction",
  "environmental-data",
  "ecology",
  "biodiversity",
  "gbif",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "black>=24.3.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://biodiversity.se/"
Repository = "https://github.com/BiodiversityDataLab/envoi"
Issues = "https://github.com/BiodiversityDataLab/envoi/issues"
Documentation = "https://github.com/BiodiversityDataLab/envoi#readme"

[tool.setuptools.dynamic]
version = { attr = "envoi._version.__version__" }

[tool.setuptools.package-data]
envoi = ["configs/*.yml", "py.typed"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
# Custom markers. Run "pytest -m gee" to exercise only the live Earth Engine
# tests, or "pytest -m 'not gee'" to skip them (e.g. on a machine without
# GEE credentials, or for fast inner-loop development).
markers = [
    "gee: tests that require live Google Earth Engine authentication (network + service account credentials)",
]
